compiler/testData/cli/jvm/stdlib.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+MultiPlatformProjects

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/stdlib/common.kt:31:1: error: no value passed for parameter 'name'.
enum class TestEnumInCommon {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/stdlib/common.kt:31:1: error: no value passed for parameter 'ordinal'.
enum class TestEnumInCommon {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
